@@ -7,7 +7,7 @@ dnl | initialize autotools |---------------------------------------------------
 dnl  ----------------------
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(qalculate-gtk, 0.6)
+AM_INIT_AUTOMAKE(qalculate-gtk, 0.6.1)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
